http/style.css
body {
  height: 100%;
  padding: 1px;
}
html {
  height: 100%;
}
#editor { 
  width: 100%;
  height: 55%
}
#output { 
  width: 100%;
  height: 40%;
}

#buttonbar {
  margin: 2px;
}

#rightbar {
  float: right;
  margin-right: 2px;
}

#saved {
  margin-top: 5px; /* this is a hack to get vertical align, should be done better somehow */
  margin-left: 5px;
  margin-right: 5px;
}

.inserterHit {
  cursor: pointer;
}

.inserterHit:hover {
  text-decoration: underline;
}

#languagepicker {
  position: absolute;
  top: 0;
  left: 0;
  width: 30%;
  padding: 20px 35% 20px 35%;
  height: 100%;
  display: none;
  background: #fff;
  z-index: 9999999;
}

